chore(migration): migrate project from Java 8 to Java 21
Upgrades the full build and runtime stack to be compatible with modern
Java and Jakarta EE namespaces. All 166 tests pass after these changes.

BREAKING CHANGE: requires Java 21 and Jakarta EE 9+ (jakarta.* namespace)

Build & compiler:
- maven-compiler-plugin 3.15.0: switch from <source>/<target> to <release>21
- maven-javadoc-plugin 3.12.0: <additionalparam> → <additionalJOption>
- maven-surefire-plugin, bundle-plugin and other plugins updated to latest stable

Dependencies:
- JasperReports 7.0.6 (modules: charts, excel-poi, hibernate, pdf, etc.)
- Hibernate 7.3.3.Final with Jakarta Persistence 3.x
- javax.servlet replaced with jakarta.servlet-api 6.1.0
- Spring 5.3.x → 6.2.8 (spring-core, spring-test, spring-web)
- HSQLDB 1.8.0.10 → 2.7.4
- Apache POI 5.5.1, Batik 1.18, Commons BeanUtils 1.9.4 (updated)

Source fixes:
- javax.servlet.* → jakarta.servlet.* in DJServletHelper, ReportWriter,
  FileReportWriter, MemoryReportWriter
- Deprecated Class.newInstance() → getDeclaredConstructor().newInstance()
  in LayoutUtils, FormatInfoRegistry, DJJRJdk13Compiler
- DJJRJdk13Compiler.isValid() unconditionally returns false: com.sun.tools.javac
  is not exported to unnamed modules under JPMS (Java 9+)
- Deprecated boxing constructors (new Integer/Long/Float/etc.) replaced with
  valueOf() across ~60 files

Test fixes:
- HSQLDB 2.x rejects the old 1.8 binary file format; replaced file-based DB
  with an in-memory database (jdbc:hsqldb:mem:test_dj_db) initialised from a
  new test_db_init.sql script executed statement-by-statement via JDBC
- HibernateUtil rewritten to guard against uninitialised SessionFactory
- HQLReportTest: added setUp() to call TestSchema.buildConfiguration() before
  each test so the Hibernate session is ready
- BaseDjReportTest: set Locale.US as JVM default in setUp/tearDown and pass
  JRParameter.REPORT_LOCALE to the fill engine so crosstab and number
  formatting is deterministic regardless of s